examples/test/testpolicy4550.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4550
  namespace: namespace312
spec:
  podSelector:
    matchLabels:
      key4: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value6
          key26: value27
      podSelector:
        matchLabels:
          key21: value41
          key13: value12
          key16: value20
